# kseexpr

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md
LICENSES/: LicenseRef-Apache-2.0.txt
cmake/: kseexpr-config.cmake  kseexpr.pc.in  macros.cmake
packaging/: config.ini  create_manifest.rb  create_release.rb  create_tarball_kf5.rb  manifest.json
poqm/ar/: seexpr2_qt.po
poqm/ca/: seexpr2_qt.po
poqm/ca@valencia/: seexpr2_qt.po
poqm/cs/: seexpr2_qt.po
poqm/de/: seexpr2_qt.po
poqm/en_GB/: seexpr2_qt.po
poqm/eo/: seexpr2_qt.po
poqm/es/: seexpr2_qt.po
poqm/eu/: seexpr2_qt.po
poqm/fi/: seexpr2_qt.po
poqm/fr/: seexpr2_qt.po
poqm/ga/: seexpr2_qt.po
poqm/gl/: seexpr2_qt.po
poqm/he/: seexpr2_qt.po
poqm/ia/: seexpr2_qt.po
poqm/it/: seexpr2_qt.po
poqm/ja/: seexpr2_qt.po
poqm/ka/: seexpr2_qt.po
poqm/ko/: seexpr2_qt.po
poqm/lt/: seexpr2_qt.po
poqm/nl/: seexpr2_qt.po
poqm/nn/: seexpr2_qt.po
poqm/pl/: seexpr2_qt.po
poqm/pt/: seexpr2_qt.po
poqm/pt_BR/: seexpr2_qt.po
poqm/ru/: seexpr2_qt.po
poqm/sk/: seexpr2_qt.po
poqm/sl/: seexpr2_qt.po
poqm/sv/: seexpr2_qt.po
poqm/tr/: seexpr2_qt.po
poqm/ug/: seexpr2_qt.po
poqm/uk/: seexpr2_qt.po
poqm/x-test/: seexpr2_qt.po
poqm/zh_CN/: seexpr2_qt.po
poqm/zh_TW/: seexpr2_qt.po
src/: Messages.sh
src/KSeExpr/: CMakeLists.txt  Context.cpp  Context.h  ContextUtils.cpp  ContextUtils.h  Curve.cpp  Curve.h  ErrorCode.h  Evaluator.h  ExprBuiltins.cpp  ExprBuiltins.h  ExprConfig.h.in  ExprEnv.cpp  ExprEnv.h  ExprFunc.cpp  ExprFunc.h  ExprFuncStandard.cpp  ExprFuncStandard.h  ExprFuncX.cpp  ExprFuncX.h  ExprLLVM.h  ExprLLVMAll.h  ExprLLVMCodeGeneration.cpp  ExprMultiExpr.cpp  ExprMultiExpr.h  ExprNode.cpp  ExprNode.h  ExprParser.h  ExprParser.y  ExprParserLex.l  ExprPatterns.h  ExprType.h  ExprWalker.cpp  ExprWalker.h  Expression.cpp  Expression.h  Interpreter.cpp  Interpreter.h  Messages.sh  Mutex.cpp  (+17 more)
src/KSeExpr/parser/: ASTNode.h  SeExprLex.cpp  SeExprLex.h  SeExprParse.cpp  SeExprParse.h
src/KSeExprPy/: CMakeLists.txt  KSeExprPy.cpp  __init__.py  example.py  parseAll.py  utils.py
src/KSeExprUI/: BasicExpression.cpp  BasicExpression.h  CMakeLists.txt  ControlSpec.cpp  ControlSpec.h  Debug.cpp  Debug.h  ECMQmLoader-seexpr2_qt.cpp  EditMain.cpp  Editable.cpp  Editable.h  EditableExpression.cpp  EditableExpression.h  ErrorMessages.cpp  ErrorMessages.h  ExprAddDialog.cpp  ExprAddDialog.h  ExprBrowser.cpp  ExprBrowser.h  ExprColorCurve.cpp  ExprColorCurve.h  ExprColorSwatch.cpp  ExprColorSwatch.h  ExprCompletionModel.cpp  ExprCompletionModel.h  ExprControl.cpp  ExprControl.h  ExprControlCollection.cpp  ExprControlCollection.h  ExprCurve.cpp  ExprCurve.h  ExprDeepWater.cpp  ExprDeepWater.h  ExprDialog.cpp  ExprEditor.cpp  ExprEditor.h  ExprFileDialog.cpp  ExprFileDialog.h  ExprGrapher2d.cpp  ExprGrapher2d.h  (+14 more)
src/SeExpr2/: CMakeLists.txt  ErrorCode.h  Evaluator.h  ExprBuiltins.cpp  ExprBuiltins.h  ExprConfig.h.in  ExprFunc.cpp  ExprFunc.h  ExprFuncStandard.cpp  ExprLLVM.h  ExprLLVMAll.h  ExprLLVMCodeGeneration.cpp  ExprMultiExpr.cpp  ExprMultiExpr.h  ExprNode.cpp  ExprNode.h  ExprParser.h  ExprParser.y  ExprParserLex.l  ExprType.h  Expression.cpp  Expression.h  Interpreter.cpp  Mutex.h  Noise.cpp  Platform.cpp  Platform.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  Vec.h
src/SeExpr2/UI/: CMakeLists.txt  ControlSpec.cpp  Debug.cpp  ECMQmLoader-seexpr2_qt.cpp  Editable.cpp  Editable.h  ErrorMessages.cpp  ErrorMessages.h  ExprBrowser.cpp  ExprBrowser.h  ExprColorCurve.cpp  ExprColorCurve.h  ExprColorSwatch.cpp  ExprColorSwatch.h  ExprCompletionModel.cpp  ExprCompletionModel.h  ExprControl.cpp  ExprControl.h  ExprControlCollection.cpp  ExprControlCollection.h  ExprCurve.cpp  ExprCurve.h  ExprDeepWater.cpp  ExprDeepWater.h  ExprDialog.cpp  ExprDialog.h  ExprEditor.cpp  ExprEditor.h  ExprFileDialog.cpp  ExprFileDialog.h  ExprGrapher2d.cpp  ExprHighlighter.cpp  ExprHighlighter.h  ExprMain.cpp  ExprPopupDoc.h  ExprShortEdit.h  ExprSpecParser.y  ExprSpecParserLex.l  ExprSpecType.h  ExprTextEdit.cpp  (+4 more)
src/cmake/: build-info  kseexpr-config.cmake  kseexpr.pc.in  macros.cmake
src/demos/: CMakeLists.txt  asciiCalculator.cpp  asciiGraph.cpp  llvmtest.cpp
src/demos/imageEditor/: CMakeLists.txt  ImageEditorDialog.h  fbm.se  imageEditor.cpp  noisecolor1.se  noisecolor2.se  raytrace.se  sinc.se
src/demos/imageSynth/: CMakeLists.txt  imageSynth.cpp  imageSynthForPaint3d.cpp
src/demos/imageSynth/examples/: 111.se  fbm.se  noise.se  noisecolor2.se  raytrace.se  run.sh  sinc.se  test.se
src/demos/imageSynth/examples/paint3d_test/: RemapShadowContribution.se  bark_eucalyptusColor.se  bark_eucalyptusDisp.se  blackToWhite.se  candycane.se  color_noise.se  dither_with_gamma.se  freakles.se  lines.se  rope_Basic.se  scaleTool.se  select_byColorDark.se  select_byThreshold.se  textureI_nstancerCircular.se  texture_Instancer.se  texture_Tiler.se  threads.se  threshold.se  uv_testPattern.se  wood_Nicks.se  xyz_colorNoise.se
src/demos/rman2/: seop.cpp
src/demos/segraph2/: CMakeLists.txt  Graph.h  GraphWindow.h
src/doc/: CMakeLists.txt  Doxyfile.in  Se_voronoi_5.png.license  main.html  main.txt  plugins.txt  tutorial.html  tutorial.txt  uitutorial.html  uitutorial.txt  userdoc.html  varblocks.html  varblocks.txt
src/tests/: BlockTests.cpp  CMakeLists.txt  SeTests.h  TypeBuilder.h  TypeIterator.h  TypePrinter.cpp  TypePrinter.h  VarBlockExample.cpp  basic.cpp  basicPython.py  dirtSimple.cpp  genImageTestFile.py  htmlReport.py  imageTests.cpp  imageTestsReport.py  imageTestsReportNew.py  imagediff.py  llvmtest.se  llvmtest.str.se  llvmtest.test.se  multiTests.cpp  string.cpp  testmain.cpp  typeTests.cpp  typeTests.h
src/utils/: CMakeLists.txt  eval.cpp  listVar.cpp  patterns.cpp
windows7/: README
